tests/snapshots/lexer__lexer@extern.input.snap
---
source: tests/lexer.rs
assertion_line: 121
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>().unwrap()"
input_file: tests/inputs/extern.input

---
- Extern
- Ident: cos
- OpenParen
- Ident: x
- CloseParen

