tests/snapshots/lexer__lexer@fn.input.snap
---
source: tests/lexer.rs
assertion_line: 11
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/fn.input

---
Ok:
  - Fn
  - Ident: foo
  - OpenParen
  - Ident: a
  - Comma
  - Ident: b
  - Comma
  - Ident: c
  - CloseParen
  - OpenBrace
  - Ident: bar
  - OpenParen
  - Ident: a
  - CloseParen
  - Op: Plus
  - Int: 2
  - CloseBrace

