tests/snapshots/lexer__lexer@for.input.snap
---
source: tests/lexer.rs
assertion_line: 11
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/for.input

---
Ok:
  - For
  - Let
  - Ident: x
  - Op: Assign
  - Int: 1
  - Semicolon
  - Ident: x
  - Op: Lt
  - Int: 10
  - Semicolon
  - Int: 1
  - OpenBrace
  - Ident: print
  - OpenParen
  - Ident: x
  - CloseParen
  - CloseBrace

