tests/snapshots/lexer__lexer@l_ops.input.snap
---
source: tests/lexer.rs
assertion_line: 219
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>().unwrap()"
input_file: tests/inputs/l_ops.input

---
- Ident: x
- Op: And
- Ident: y
- Ident: x
- Op: Or
- Ident: y
- Ident: x
- Op: Eq
- Ident: y

