tests/snapshots/lexer__lexer@num_err.input.snap
---
source: tests/lexer.rs
assertion_line: 11
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/num_err.input

---
Err: InvalidNum

