tests/snapshots/lexer__lexer@unknown_char.input.snap
---
source: tests/lexer.rs
assertion_line: 11
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/lexer/unknown_char.input

---
Err:
  message: "Unknown character: `"
  line: 1
  column: 11

